# bart

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  demo.tape  kaptaind.toml
.kaptaind/: daemon.out  version_cache.json
.kaptaind/analysis/: 2d0d6362-87c2-4db1-84af-e03487fea83c.json  3c909eac-ce73-4996-bb81-d11627e78211.json  89cf3209-9bfc-47e9-b2a1-a47cfb425c4a.json  b1ff7acd-af35-4e58-b4f3-cf0c06584e31.json  ca7e3a2a-62e0-4725-93a5-184d475b8eaf.json  de5260f4-caa3-4a94-8158-649d8eb9fcbd.json  faca43da-efc8-4d9e-a80d-4a2184b66a01.json
assets/vhs/: daemon_observability.tape  differential.tape  interactive_tui.tape  scan_core.tape
man/: bart.1
man/man1/: bart.1
scripts/: generate_demos.sh
src/: main.rs
