[package]
name = "bart"
version = "0.1.32"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
colored = "2.0"
humansize = "2.1"
term_size = "0.3"
unicode-width = "0.1"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29.0"
chrono = "0.4.44"
rayon = "1.11.0"
ignore = "0.4.25"
